tests/build/cases/widget_new/unknown_special_value.stderr
error: unknown special value, expected `unset!`
 --> cases/widget_new/unknown_special_value.rs:6:18
  |
6 |         margin = foo!;
  |                  ^^^

warning: unused import: `layout::margin`
 --> cases/widget_new/unknown_special_value.rs:1:11
  |
1 | use zng::{layout::margin, widget::Wgt, APP};
  |           ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
